# check-7.16

./: .env.example  .gitattributes  .gitignore  README.md  claims.json  document_pipeline.py  env.example  env.example_副本.textClipping  lawctl.py  legal_numbers.py  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  runtime_checks.py  runtime_env.py  server.py
.claude/: settings.local.json
api/: __init__.py  app.py  report.py  schema.py
apps/: __init__.py
claims/: __init__.py  arbiter.py  case_citation.py  extractor.py  filters.py  legal_citation.py  rule_engine.py  schema.py  validators.py
data/: law_manifest.json
docs/: deploy.md  design-spec.md  known-issues.md  render-deploy.md  word-mac-testing-guide.md
laws/: __init__.py  common_laws.json  sqlite_store.py
outputs/: claims1.json  verify1.json  verify3.json  verify4.json
parser/: __init__.py  chunk_builder.py  docx_parser.py  heading_detector.py  renderer.py  schema.py  sentence_splitter.py  utils.py  validators.py
retrieval/: __init__.py  gov_search.py  local_source.py  pkulaw_source.py  router.py  schema.py
statutedb/: __init__.py  cn_num.py  db.py  importer.py  law_parser.py  normalizer.py  store.py
test_docs/: 测试文书一_法律意见书.docx  测试文书三_案例引用.docx  测试文书二_数据合规备忘录.docx  测试文书四_简称重复引用.docx  答案对照表.md
tests/: __init__.py  test_api.py  test_arbiter.py  test_article_retrieval.py  test_case_identity_matching.py  test_chunk_builder.py  test_claim_validators.py  test_debug_capture.py  test_deterministic_assessments.py  test_document_pipeline.py  test_docx_parser.py  test_eurlex.py  (+30 more)
(+171 files in other folders)
